tests/burghard/pass/elseoption_after_elseoption.wsa
    push 1
ifoption x
    push 2
elseoption
    push 3
elseoption
    push 4
endoption
    push 5
