tests/burghard/fail/elseoption_no_ifoption.wsa
    push 1
elseoption
    push 2
endoption
    push 3
